// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot when the user is not signed in 1`] = `
<header
  className="Header"
>
  <Link
    to="/"
  >
    <h1>
      Paired
    </h1>
  </Link>
</header>
`;

exports[`Header should match the snapshot when the user is signed in 1`] = `
<header
  className="Header"
>
  <Link
    to="/"
  >
    <h1>
      Paired
    </h1>
  </Link>
  <div
    className="Header--controls"
  >
    <NavLink
      to="/schedule"
    >
      View Schedule
    </NavLink>
    <NavLink
      to="/book-pairing"
    >
      Book a Pairing
    </NavLink>
    <button
      className="Header--button--signout"
      onClick={[MockFunction]}
    >
      Sign Out
    </button>
  </div>
</header>
`;
